# py-airbnb-clone-backend

./: .gitignore  README.md  pyproject.toml  render.yaml
bookings/: serializers.py
bookings/migrations/: 0001_initial.py
categories/: serializers.py  urls.py  views.py
categories/migrations/: 0001_initial.py
common/: models.py
config/: schema.py  settings.py  urls.py
direct_messages/migrations/: 0001_initial.py
experiences/migrations/: 0001_initial.py
houses/: admin.py  models.py
houses/migrations/: 0001_initial.py  0002_house_pats_allowed.py  0003_rename_price_house_price_per_night.py  0004_rename_pats_allowed_house_pets_allowed.py
medias/: models.py  views.py
medias/migrations/: 0001_initial.py  0002_alter_photo_file.py  0003_photo_test.py  0004_remove_photo_test_alter_photo_experience_and_more.py
reviews/migrations/: 0001_initial.py  0002_alter_review_experience_alter_review_room_and_more.py
rooms/: admin.py  models.py  queries.py  schema.py  serializers.py  types.py  urls.py  views.py
rooms/migrations/: 0001_initial.py  0002_alter_room_owner.py  0003_alter_room_amenities_alter_room_category.py
users/: admin.py  models.py  views.py
users/migrations/: 0001_initial.py  0002_user_avatar_user_currency_user_gender_user_is_host_and_more.py  0003_alter_user_avatar_alter_user_currency_and_more.py  0004_alter_user_currency.py  0005_alter_user_currency.py
wishlists/: views.py
wishlists/migrations/: 0001_initial.py
